优化后端面试题：重构理论与代码分离，优化Mermaid图表和文档结构